# code-tutorial-builder

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HAPPYPATH.md  README.md  example.py  example_tutorial.md  pyproject.toml  requirements.txt  run.sh
.claude/skills/lesson-scanner/: SKILL.md
code_tutorial_builder/: __main__.py  ai.py  analysis.py  config.py  config.py"  exceptions.py  generator.py  generator.py"  parser.py  scanner.py
code_tutorial_builder/languages/: __init__.py  _base.py  _python_parser.py  _registry.py  _treesitter.py  go.py  java.py  javascript.py  python.py  rust.py  typescript.py
code_tutorial_builder/templates/: default.md.j2  handout.md.j2
templates/: default.md.j2
tests/: test_ai.py  test_analysis.py  test_cli.py  test_generator.py  test_languages.py  test_parser.py  test_scanner.py  test_treesitter.py
tests/fixtures/: sample.go  sample.js  sample.py
