[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-tutorial-builder"
version = "0.3.0"
description = "Convert working code into step-by-step lessons with explanations and runnable examples"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
multilang = [
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.23",
]
dev = [
    "pytest>=7.0",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.23",
]

[project.scripts]
code-tutorial-builder = "code_tutorial_builder.__main__:main"

[tool.setuptools.packages.find]
include = ["code_tutorial_builder*"]

[tool.setuptools.package-data]
code_tutorial_builder = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
